[package]
name = "dub_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
crossterm = "0.27.0"
fs_extra = "1.3.0"
log = "0.4.20"
log4rs = "1.2.0"
permutation = "0.4.1"
rand = "0.8.5"
rodio = "0.17.3"

[profile.release] # make this as fast as possible
lto = "fat"
codegen-units = 1